Updated utils and elevatedlauncher

--- a/NateLauncher/NateLauncher.csproj
+++ b/NateLauncher/NateLauncher.csproj
@@ -207,9 +207,7 @@
   <ItemGroup>
     <Resource Include="Logo.ico" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="NewFolder1\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <Resource Include="Resources\missionchief.png" />
   </ItemGroup>
